fix right block scroll & improve scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+*::-webkit-scrollbar {
+  width: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  display: none;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  background-color: #888888;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
